--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     //Dagger2:
     implementation 'com.google.dagger:dagger:2.40.5'
     kapt 'com.google.dagger:dagger-compiler:2.40.5'
+
+    //visual:
+    implementation 'com.airbnb.android:lottie:5.0.3'
 }
