--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,6 @@ dependencies {
     //visual:
     implementation 'com.airbnb.android:lottie:5.0.3'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
