--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,15 @@
         <activity
             android:name=".ui.activities.SearchActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.testing.LearningActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.LearningResultActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.WordsDetailsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
